reformat controllers